feat: api docs for organization
